[package]
name = "imshow"
version = "0.1.0"
authors = ["Michaël Lévesque-Dion <mlevesquedion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.4"
clap = "2.33.0"
term_size = "0.3.2"
ansi_term = "0.12.1"
